<resources>
    <string name="app_name">RecipeApp</string>
    <string name="text_name">Ayesha Azeema</string>
    <string name="text_email">ayesha.azeema@gmail.com</string>
    <string name="more">MORE</string>
    <string name="top_menu">Top Menu</string>
    <string name="nasi_goreng">Nasi Goreng</string>
    <string name="sate">Sate</string>
    <string name="siomay">Siomay</string>
    <string name="batagor">Batagor</string>
    <string name="soto">Soto</string>
    <string name="gudeg">Gudeg</string>
    <string name="gado_gado">Gado Gado</string>
    <string name="bakso">Bakso</string>
    <string name="text_imageview">ImageView</string>
    <string name="bakmi">Bakmi</string>
    <string name="welcome">Welcome,</string>
    <string name="text_sign_in">Sign in to continue</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="new_member">New Member?</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="email">E-mail</string>
    <string name="default_web_client_id">164214416374-p77ht3rfl020ph8852r1ardccv7nj1uk.apps.googleusercontent.com</string>
    <string-array name="name_food">
        <item>Nasi Goreng</item>
        <item>Sate</item>
        <item>Siomay</item>
        <item>Batagor</item>
        <item>Soto</item>
        <item>Gudeg</item>
        <item>Gado Gado</item>
        <item>Bakso</item>
        <item>Bakmi</item>
        <item>Omelet</item>
        <item>Sambal Nanas</item>
        <item>Bakwan</item>
    </string-array>
    <string-array name="desc_food">
        <item>Nasi goreng merupakan menu andalan yang bisa tersaji cepat, namun dijamin selalu memanjakan lidah penikmatnya. Ia juga kurang lengkap bila disantap tanpa telur. Baik telur mata sapi, telur orak-arik, atau telur dadar.</item>
        <item>Tips yang perlu diperhatikan saat membuat sate kambing yaitu merendam daging terlebih dulu bersama bumbu (marinate) minimal 1 jam dalam kulkas. Cara ini bisa membuat daging jadi lebih empuk dan bumbunya meresap. Saat membakar, anda juga bisa sesekali mengoles sate dengan sisa bumbu agar bumbunya lebih mantap merekat.</item>
        <item>Siomay ikan khas Bandung memang sudah lama jadi kesukaan semua orang. Rasanya begitu khas dan nikmat. Butuh cara membuat dan bahan yang tepat untuk membuat siomay yang senikmat siomay Bandung. Penasaran dengan resepnya? Catat bahannya dan ikuti cara membuatnya.</item>
        <item>Sore hari paling enak ngemil batagor. Bakso tahu goreng ini teksturnya yang renyah di luar dan kenyal di dalam, bikin batagor disukai banyak orang. Makanan khas asli bandung ini disajikan bersama saus kacang dan kecap manis. Kalau mau menikmati batagor lezat, anda tidak harus selalu membelinya karena membuat batagor tidaklah sulit. Selain itu, batagor yang dibuat sendiri tentu lebih terjamin kebersihannya.</item>
        <item>Soto Betawi merupakan salah satu kuliner khas Jakarta yang muncul sekitar tahun 1977-1978. Yang mempopulerkan dan pertama memakai kata Soto Betawi adalah penjual soto di THR Lokasari. Selain daging sapi, jeroan seperti paru, usus, dan babat juga digunakan sebagai bahan baku soto ini.</item>
        <item>Gudeg merupakan sayur nangka yang dimasak dengan santan hingga menghasilkan areh (kuah) yang kental. Gudeg merupakan makanan khas Yogyakarta dan Jawa Tengah. Selain sayur nangka, biasanya gudeg disajikan juga dengan sambal goreng krecek. Rasanya yang manis dan legit menjadi ciri khas hidangan yang satu ini. Membuat gudeg dibutuhkan teknik memasak slow cooking.</item>
        <item>Salad asli Indonesia ini berasal dari Jawa yang terdiri dari sayur-sayuran yang direbus dan dicampur jadi satu, dengan bumbu kacang yang dihaluskan. Dilengkapi dengan irisan telur rebus, timun dan bawang goreng dapat menambah kenikmatan. Gado-gado biasanya disajikan dengan irisan lontong atau bisa juga disantap bersama nasi sesuai selera.</item>
        <item>Bakso dipercaya berakar dari  kuliner khas orang Tionghoa. Kata bakso sendiri merupakan bahasa hokkien yang berarti daging giling. Bentuknya yang bulat seperti bola dan kuah pekat kaldu sapinya menjadi ciri khas hidangan nikmat yang satu ini. Kuliner yang satu ini sekarang bisa dengan mudah ditemukan di seluruh penjuru Indonesia.</item>
        <item>Setiap daerah memiliki beragam makanan khas yang ketenarannya menyebar ke seluruh Indonesia. Di Bangka, ada mie ayam bangka yang kepopulerannya menyebar hingga keluar pulau.</item>
        <item>Omelet dengan isi irisan tomat, bombay, jamur, dan keju ini bisa kamu coba untuk menu sarapan praktis yang penuh gizi. Ikuti langkah-langkah membuatnya berikut ini untuk omelet yang mengembang tebal dan lembut.</item>
        <item>Pedas namun menyegarkan, sambal nanas memang paling cocok disantap bersama aneka seafood yang digoreng atau dibakar. Punya nanas di rumah? Buat saja sambal nanas ala rumahan yang mudah dan lezat dengan resep berikut ini.</item>
        <item>Bakwan sering dijadikan camilan atau teman makan nasi. Rasa gurih dan renyahnya disukai semua orang. Harga bakwan juga relatif murah, serta mudah untuk dibuat. Hanya memerlukan tepung terigu, aneka macam sayuran dan bumbu yang dicampur menjadi adonan lalu digoreng.</item>
    </string-array>
</resources>