<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/login_arrow_back"
        android:layout_width="@dimen/_30dp"
        android:layout_height="@dimen/_30dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_35dp"
        android:src="@drawable/ic_arrow_back" />

    <LinearLayout
        android:id="@+id/ll_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_arrow_back"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_30dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/welcome"
            android:textColor="@color/main_green"
            android:textSize="@dimen/_28sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/text_sign_in"
            android:textColor="@color/dark_green"
            android:textSize="@dimen/_22sp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/email" />

        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_30dp"
            android:fontFamily="@font/poppins_light"
            android:hint="@string/password" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/forgot_password"
            android:textColor="@color/red"
            android:textSize="@dimen/_20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70dp"
        android:layout_above="@id/btn_google_sign_in"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_10dp"
        android:backgroundTint="@color/main_green"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/sign_in"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/_20sp" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/btn_google_sign_in"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_70dp"
        android:layout_above="@id/ll_sign_up"
        android:layout_marginBottom="@dimen/_10dp"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"/>

    <LinearLayout
        android:id="@+id/ll_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/_35dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_light"
            android:text="@string/new_member"
            android:textSize="@dimen/_16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_5dp"
            android:fontFamily="@font/poppins_semibold"
            android:text="@string/sign_up"
            android:textSize="@dimen/_16sp" />

    </LinearLayout>

</RelativeLayout>